dist_noinst_DATA = README \
	00_trivial.txt \
	01_single_toc.txt 02_single_toc.txt \
	03_double_toc.txt 04_double_toc.txt \
	10_suspend_resume.txt \
	11_end_join.txt 12_end_join.txt 13_end_join.txt \
	14_branch_ora.txt 15_branch_mys.txt 16_branch_pql.txt \
	17_branch_pql_ora.txt 18_branch_mys_pql.txt 19_branch_mys_ora.txt
