if COMPILE_ORACLE_STUFF
  MAYBE_ORACLE = oracle
endif
if COMPILE_IBMDB2_STUFF
  MAYBE_IBMDB2 = ibmdb2
endif
if COMPILE_POSTGRESQL_STUFF
  MAYBE_POSTGRESQL = postgresql
endif
if COMPILE_MYSQL_STUFF
  MAYBE_MYSQL = mysql
endif
SUBDIRS = lixa $(MAYBE_ORACLE) $(MAYBE_IBMDB2) $(MAYBE_POSTGRESQL) $(MAYBE_MYSQL)
