# This is just a placeholder: autotools and GnuCOBOL are work in progress
# https://sourceforge.net/p/open-cobol/discussion/help/thread/2fabae5a/
# before or later it will be fixed... :)

#check_PROGRAMS = CASE1000 CASE1037

#SUFFIXES = .cob

#.cob.xx:
#	$(COBC) $(COBOL_CPPFLAGS) -C $< 
#	cp $< $@

#.o.:
#	$(COBC) $(COBOL_CPPFLAGS) -C $< 
#	make -f Makefile.custom $<

#% : %.cbl
#	$(COBC) -x $(lixa-config -f -l) $<



#export COB_LDFLAGS=-Wl,--no-as-needed

#BASEDIR = ../../..
#LIXA_CONFIG = $(BASEDIR)/src/client/lixa-config
# default options, note that -g will leave intermediate files
#COBCOPTS = -I ../../../src/client -L../../../src/client/.libs -llixac
#COBCOPTS_PQ = $(COBCOPTS) -L../../../src/client/switch/postgresql/.libs -llixapq

#CASE1000$(EXEEXT): CASE1000.cob
#	cobc $(COBCOPTS) -x $^ -o $@

#CASE1037$(EXEEXT): CASE1037.cob
#	cobc $(COBCOPTS_PQ) -x $^ -o $@

